Kolokvijum 2(Pripremni zadaci)/ForIdIn/code-gen/micko.output
Terminals unused in grammar

   _IN
   _FOR
   _DVETACKE


Grammar

    0 $accept: program $end

    1 program: global_list function_list

    2 global_list: %empty
    3            | global_list global_var

    4 global_var: _TYPE _ID _SEMICOLON

    5 function_list: function
    6              | function_list function

    7 $@1: %empty

    8 function: _TYPE _ID $@1 _LPAREN parameter _RPAREN body

    9 parameter: %empty
   10          | _TYPE _ID

   11 $@2: %empty

   12 body: _LBRACKET variable_list $@2 statement_list _RBRACKET

   13 variable_list: %empty
   14              | variable_list variable

   15 variable: _TYPE _ID _SEMICOLON

   16 statement_list: %empty
   17               | statement_list statement

   18 statement: compound_statement
   19          | assignment_statement
   20          | if_statement
   21          | return_statement
   22          | iterate_statement

   23 @3: %empty

   24 $@4: %empty

   25 iterate_statement: _ITERATE _ID @3 literal _TO literal $@4 statement

   26 compound_statement: _LBRACKET statement_list _RBRACKET

   27 assignment_statement: _ID _ASSIGN num_exp _SEMICOLON

   28 num_exp: exp
   29        | num_exp _AROP exp

   30 exp: literal
   31    | _ID
   32    | function_call
   33    | _LPAREN num_exp _RPAREN

   34 literal: _INT_NUMBER
   35        | _UINT_NUMBER

   36 $@5: %empty

   37 function_call: _ID $@5 _LPAREN argument _RPAREN

   38 argument: %empty
   39         | num_exp

   40 if_statement: if_part
   41             | if_part _ELSE statement

   42 @6: %empty

   43 $@7: %empty

   44 if_part: _IF _LPAREN @6 rel_exp $@7 _RPAREN statement

   45 rel_exp: num_exp _RELOP num_exp

   46 return_statement: _RETURN num_exp _SEMICOLON


Terminals, with rules where they appear

$end (0) 0
error (256)
_TYPE (258) 4 8 10 15
_IF (259) 44
_ELSE (260) 41
_RETURN (261) 46
_ID (262) 4 8 10 15 25 27 31 37
_INT_NUMBER (263) 34
_UINT_NUMBER (264) 35
_LPAREN (265) 8 33 37 44
_RPAREN (266) 8 33 37 44
_LBRACKET (267) 12 26
_RBRACKET (268) 12 26
_ASSIGN (269) 27
_SEMICOLON (270) 4 15 27 46
_AROP (271) 29
_RELOP (272) 45
_IN (273)
_FOR (274)
_DVETACKE (275)
_ITERATE (276) 25
_TO (277) 25
ONLY_IF (278)


Nonterminals, with rules where they appear

$accept (24)
    on left: 0
program (25)
    on left: 1, on right: 0
global_list (26)
    on left: 2 3, on right: 1 3
global_var (27)
    on left: 4, on right: 3
function_list (28)
    on left: 5 6, on right: 1 6
function (29)
    on left: 8, on right: 5 6
$@1 (30)
    on left: 7, on right: 8
parameter (31)
    on left: 9 10, on right: 8
body (32)
    on left: 12, on right: 8
$@2 (33)
    on left: 11, on right: 12
variable_list (34)
    on left: 13 14, on right: 12 14
variable (35)
    on left: 15, on right: 14
statement_list (36)
    on left: 16 17, on right: 12 17 26
statement (37)
    on left: 18 19 20 21 22, on right: 17 25 41 44
iterate_statement (38)
    on left: 25, on right: 22
@3 (39)
    on left: 23, on right: 25
$@4 (40)
    on left: 24, on right: 25
compound_statement (41)
    on left: 26, on right: 18
assignment_statement (42)
    on left: 27, on right: 19
num_exp (43)
    on left: 28 29, on right: 27 29 33 39 45 46
exp (44)
    on left: 30 31 32 33, on right: 28 29
literal (45)
    on left: 34 35, on right: 25 30
function_call (46)
    on left: 37, on right: 32
$@5 (47)
    on left: 36, on right: 37
argument (48)
    on left: 38 39, on right: 37
if_statement (49)
    on left: 40 41, on right: 20
if_part (50)
    on left: 44, on right: 40 41
@6 (51)
    on left: 42, on right: 44
$@7 (52)
    on left: 43, on right: 44
rel_exp (53)
    on left: 45, on right: 44
return_statement (54)
    on left: 46, on right: 21


State 0

    0 $accept: . program $end

    $default  reduce using rule 2 (global_list)

    program      go to state 1
    global_list  go to state 2


State 1

    0 $accept: program . $end

    $end  shift, and go to state 3


State 2

    1 program: global_list . function_list
    3 global_list: global_list . global_var

    _TYPE  shift, and go to state 4

    global_var     go to state 5
    function_list  go to state 6
    function       go to state 7


State 3

    0 $accept: program $end .

    $default  accept


State 4

    4 global_var: _TYPE . _ID _SEMICOLON
    8 function: _TYPE . _ID $@1 _LPAREN parameter _RPAREN body

    _ID  shift, and go to state 8


State 5

    3 global_list: global_list global_var .

    $default  reduce using rule 3 (global_list)


State 6

    1 program: global_list function_list .
    6 function_list: function_list . function

    _TYPE  shift, and go to state 9

    $default  reduce using rule 1 (program)

    function  go to state 10


State 7

    5 function_list: function .

    $default  reduce using rule 5 (function_list)


State 8

    4 global_var: _TYPE _ID . _SEMICOLON
    8 function: _TYPE _ID . $@1 _LPAREN parameter _RPAREN body

    _SEMICOLON  shift, and go to state 11

    $default  reduce using rule 7 ($@1)

    $@1  go to state 12


State 9

    8 function: _TYPE . _ID $@1 _LPAREN parameter _RPAREN body

    _ID  shift, and go to state 13


State 10

    6 function_list: function_list function .

    $default  reduce using rule 6 (function_list)


State 11

    4 global_var: _TYPE _ID _SEMICOLON .

    $default  reduce using rule 4 (global_var)


State 12

    8 function: _TYPE _ID $@1 . _LPAREN parameter _RPAREN body

    _LPAREN  shift, and go to state 14


State 13

    8 function: _TYPE _ID . $@1 _LPAREN parameter _RPAREN body

    $default  reduce using rule 7 ($@1)

    $@1  go to state 12


State 14

    8 function: _TYPE _ID $@1 _LPAREN . parameter _RPAREN body

    _TYPE  shift, and go to state 15

    $default  reduce using rule 9 (parameter)

    parameter  go to state 16


State 15

   10 parameter: _TYPE . _ID

    _ID  shift, and go to state 17


State 16

    8 function: _TYPE _ID $@1 _LPAREN parameter . _RPAREN body

    _RPAREN  shift, and go to state 18


State 17

   10 parameter: _TYPE _ID .

    $default  reduce using rule 10 (parameter)


State 18

    8 function: _TYPE _ID $@1 _LPAREN parameter _RPAREN . body

    _LBRACKET  shift, and go to state 19

    body  go to state 20


State 19

   12 body: _LBRACKET . variable_list $@2 statement_list _RBRACKET

    $default  reduce using rule 13 (variable_list)

    variable_list  go to state 21


State 20

    8 function: _TYPE _ID $@1 _LPAREN parameter _RPAREN body .

    $default  reduce using rule 8 (function)


State 21

   12 body: _LBRACKET variable_list . $@2 statement_list _RBRACKET
   14 variable_list: variable_list . variable

    _TYPE  shift, and go to state 22

    $default  reduce using rule 11 ($@2)

    $@2       go to state 23
    variable  go to state 24


State 22

   15 variable: _TYPE . _ID _SEMICOLON

    _ID  shift, and go to state 25


State 23

   12 body: _LBRACKET variable_list $@2 . statement_list _RBRACKET

    $default  reduce using rule 16 (statement_list)

    statement_list  go to state 26


State 24

   14 variable_list: variable_list variable .

    $default  reduce using rule 14 (variable_list)


State 25

   15 variable: _TYPE _ID . _SEMICOLON

    _SEMICOLON  shift, and go to state 27


State 26

   12 body: _LBRACKET variable_list $@2 statement_list . _RBRACKET
   17 statement_list: statement_list . statement

    _IF        shift, and go to state 28
    _RETURN    shift, and go to state 29
    _ID        shift, and go to state 30
    _LBRACKET  shift, and go to state 31
    _RBRACKET  shift, and go to state 32
    _ITERATE   shift, and go to state 33

    statement             go to state 34
    iterate_statement     go to state 35
    compound_statement    go to state 36
    assignment_statement  go to state 37
    if_statement          go to state 38
    if_part               go to state 39
    return_statement      go to state 40


State 27

   15 variable: _TYPE _ID _SEMICOLON .

    $default  reduce using rule 15 (variable)


State 28

   44 if_part: _IF . _LPAREN @6 rel_exp $@7 _RPAREN statement

    _LPAREN  shift, and go to state 41


State 29

   46 return_statement: _RETURN . num_exp _SEMICOLON

    _ID           shift, and go to state 42
    _INT_NUMBER   shift, and go to state 43
    _UINT_NUMBER  shift, and go to state 44
    _LPAREN       shift, and go to state 45

    num_exp        go to state 46
    exp            go to state 47
    literal        go to state 48
    function_call  go to state 49


State 30

   27 assignment_statement: _ID . _ASSIGN num_exp _SEMICOLON

    _ASSIGN  shift, and go to state 50


State 31

   26 compound_statement: _LBRACKET . statement_list _RBRACKET

    $default  reduce using rule 16 (statement_list)

    statement_list  go to state 51


State 32

   12 body: _LBRACKET variable_list $@2 statement_list _RBRACKET .

    $default  reduce using rule 12 (body)


State 33

   25 iterate_statement: _ITERATE . _ID @3 literal _TO literal $@4 statement

    _ID  shift, and go to state 52


State 34

   17 statement_list: statement_list statement .

    $default  reduce using rule 17 (statement_list)


State 35

   22 statement: iterate_statement .

    $default  reduce using rule 22 (statement)


State 36

   18 statement: compound_statement .

    $default  reduce using rule 18 (statement)


State 37

   19 statement: assignment_statement .

    $default  reduce using rule 19 (statement)


State 38

   20 statement: if_statement .

    $default  reduce using rule 20 (statement)


State 39

   40 if_statement: if_part .
   41             | if_part . _ELSE statement

    _ELSE  shift, and go to state 53

    $default  reduce using rule 40 (if_statement)


State 40

   21 statement: return_statement .

    $default  reduce using rule 21 (statement)


State 41

   44 if_part: _IF _LPAREN . @6 rel_exp $@7 _RPAREN statement

    $default  reduce using rule 42 (@6)

    @6  go to state 54


State 42

   31 exp: _ID .
   37 function_call: _ID . $@5 _LPAREN argument _RPAREN

    _LPAREN   reduce using rule 36 ($@5)
    $default  reduce using rule 31 (exp)

    $@5  go to state 55


State 43

   34 literal: _INT_NUMBER .

    $default  reduce using rule 34 (literal)


State 44

   35 literal: _UINT_NUMBER .

    $default  reduce using rule 35 (literal)


State 45

   33 exp: _LPAREN . num_exp _RPAREN

    _ID           shift, and go to state 42
    _INT_NUMBER   shift, and go to state 43
    _UINT_NUMBER  shift, and go to state 44
    _LPAREN       shift, and go to state 45

    num_exp        go to state 56
    exp            go to state 47
    literal        go to state 48
    function_call  go to state 49


State 46

   29 num_exp: num_exp . _AROP exp
   46 return_statement: _RETURN num_exp . _SEMICOLON

    _SEMICOLON  shift, and go to state 57
    _AROP       shift, and go to state 58


State 47

   28 num_exp: exp .

    $default  reduce using rule 28 (num_exp)


State 48

   30 exp: literal .

    $default  reduce using rule 30 (exp)


State 49

   32 exp: function_call .

    $default  reduce using rule 32 (exp)


State 50

   27 assignment_statement: _ID _ASSIGN . num_exp _SEMICOLON

    _ID           shift, and go to state 42
    _INT_NUMBER   shift, and go to state 43
    _UINT_NUMBER  shift, and go to state 44
    _LPAREN       shift, and go to state 45

    num_exp        go to state 59
    exp            go to state 47
    literal        go to state 48
    function_call  go to state 49


State 51

   17 statement_list: statement_list . statement
   26 compound_statement: _LBRACKET statement_list . _RBRACKET

    _IF        shift, and go to state 28
    _RETURN    shift, and go to state 29
    _ID        shift, and go to state 30
    _LBRACKET  shift, and go to state 31
    _RBRACKET  shift, and go to state 60
    _ITERATE   shift, and go to state 33

    statement             go to state 34
    iterate_statement     go to state 35
    compound_statement    go to state 36
    assignment_statement  go to state 37
    if_statement          go to state 38
    if_part               go to state 39
    return_statement      go to state 40


State 52

   25 iterate_statement: _ITERATE _ID . @3 literal _TO literal $@4 statement

    $default  reduce using rule 23 (@3)

    @3  go to state 61


State 53

   41 if_statement: if_part _ELSE . statement

    _IF        shift, and go to state 28
    _RETURN    shift, and go to state 29
    _ID        shift, and go to state 30
    _LBRACKET  shift, and go to state 31
    _ITERATE   shift, and go to state 33

    statement             go to state 62
    iterate_statement     go to state 35
    compound_statement    go to state 36
    assignment_statement  go to state 37
    if_statement          go to state 38
    if_part               go to state 39
    return_statement      go to state 40


State 54

   44 if_part: _IF _LPAREN @6 . rel_exp $@7 _RPAREN statement

    _ID           shift, and go to state 42
    _INT_NUMBER   shift, and go to state 43
    _UINT_NUMBER  shift, and go to state 44
    _LPAREN       shift, and go to state 45

    num_exp        go to state 63
    exp            go to state 47
    literal        go to state 48
    function_call  go to state 49
    rel_exp        go to state 64


State 55

   37 function_call: _ID $@5 . _LPAREN argument _RPAREN

    _LPAREN  shift, and go to state 65


State 56

   29 num_exp: num_exp . _AROP exp
   33 exp: _LPAREN num_exp . _RPAREN

    _RPAREN  shift, and go to state 66
    _AROP    shift, and go to state 58


State 57

   46 return_statement: _RETURN num_exp _SEMICOLON .

    $default  reduce using rule 46 (return_statement)


State 58

   29 num_exp: num_exp _AROP . exp

    _ID           shift, and go to state 42
    _INT_NUMBER   shift, and go to state 43
    _UINT_NUMBER  shift, and go to state 44
    _LPAREN       shift, and go to state 45

    exp            go to state 67
    literal        go to state 48
    function_call  go to state 49


State 59

   27 assignment_statement: _ID _ASSIGN num_exp . _SEMICOLON
   29 num_exp: num_exp . _AROP exp

    _SEMICOLON  shift, and go to state 68
    _AROP       shift, and go to state 58


State 60

   26 compound_statement: _LBRACKET statement_list _RBRACKET .

    $default  reduce using rule 26 (compound_statement)


State 61

   25 iterate_statement: _ITERATE _ID @3 . literal _TO literal $@4 statement

    _INT_NUMBER   shift, and go to state 43
    _UINT_NUMBER  shift, and go to state 44

    literal  go to state 69


State 62

   41 if_statement: if_part _ELSE statement .

    $default  reduce using rule 41 (if_statement)


State 63

   29 num_exp: num_exp . _AROP exp
   45 rel_exp: num_exp . _RELOP num_exp

    _AROP   shift, and go to state 58
    _RELOP  shift, and go to state 70


State 64

   44 if_part: _IF _LPAREN @6 rel_exp . $@7 _RPAREN statement

    $default  reduce using rule 43 ($@7)

    $@7  go to state 71


State 65

   37 function_call: _ID $@5 _LPAREN . argument _RPAREN

    _ID           shift, and go to state 42
    _INT_NUMBER   shift, and go to state 43
    _UINT_NUMBER  shift, and go to state 44
    _LPAREN       shift, and go to state 45

    $default  reduce using rule 38 (argument)

    num_exp        go to state 72
    exp            go to state 47
    literal        go to state 48
    function_call  go to state 49
    argument       go to state 73


State 66

   33 exp: _LPAREN num_exp _RPAREN .

    $default  reduce using rule 33 (exp)


State 67

   29 num_exp: num_exp _AROP exp .

    $default  reduce using rule 29 (num_exp)


State 68

   27 assignment_statement: _ID _ASSIGN num_exp _SEMICOLON .

    $default  reduce using rule 27 (assignment_statement)


State 69

   25 iterate_statement: _ITERATE _ID @3 literal . _TO literal $@4 statement

    _TO  shift, and go to state 74


State 70

   45 rel_exp: num_exp _RELOP . num_exp

    _ID           shift, and go to state 42
    _INT_NUMBER   shift, and go to state 43
    _UINT_NUMBER  shift, and go to state 44
    _LPAREN       shift, and go to state 45

    num_exp        go to state 75
    exp            go to state 47
    literal        go to state 48
    function_call  go to state 49


State 71

   44 if_part: _IF _LPAREN @6 rel_exp $@7 . _RPAREN statement

    _RPAREN  shift, and go to state 76


State 72

   29 num_exp: num_exp . _AROP exp
   39 argument: num_exp .

    _AROP  shift, and go to state 58

    $default  reduce using rule 39 (argument)


State 73

   37 function_call: _ID $@5 _LPAREN argument . _RPAREN

    _RPAREN  shift, and go to state 77


State 74

   25 iterate_statement: _ITERATE _ID @3 literal _TO . literal $@4 statement

    _INT_NUMBER   shift, and go to state 43
    _UINT_NUMBER  shift, and go to state 44

    literal  go to state 78


State 75

   29 num_exp: num_exp . _AROP exp
   45 rel_exp: num_exp _RELOP num_exp .

    _AROP  shift, and go to state 58

    $default  reduce using rule 45 (rel_exp)


State 76

   44 if_part: _IF _LPAREN @6 rel_exp $@7 _RPAREN . statement

    _IF        shift, and go to state 28
    _RETURN    shift, and go to state 29
    _ID        shift, and go to state 30
    _LBRACKET  shift, and go to state 31
    _ITERATE   shift, and go to state 33

    statement             go to state 79
    iterate_statement     go to state 35
    compound_statement    go to state 36
    assignment_statement  go to state 37
    if_statement          go to state 38
    if_part               go to state 39
    return_statement      go to state 40


State 77

   37 function_call: _ID $@5 _LPAREN argument _RPAREN .

    $default  reduce using rule 37 (function_call)


State 78

   25 iterate_statement: _ITERATE _ID @3 literal _TO literal . $@4 statement

    $default  reduce using rule 24 ($@4)

    $@4  go to state 80


State 79

   44 if_part: _IF _LPAREN @6 rel_exp $@7 _RPAREN statement .

    $default  reduce using rule 44 (if_part)


State 80

   25 iterate_statement: _ITERATE _ID @3 literal _TO literal $@4 . statement

    _IF        shift, and go to state 28
    _RETURN    shift, and go to state 29
    _ID        shift, and go to state 30
    _LBRACKET  shift, and go to state 31
    _ITERATE   shift, and go to state 33

    statement             go to state 81
    iterate_statement     go to state 35
    compound_statement    go to state 36
    assignment_statement  go to state 37
    if_statement          go to state 38
    if_part               go to state 39
    return_statement      go to state 40


State 81

   25 iterate_statement: _ITERATE _ID @3 literal _TO literal $@4 statement .

    $default  reduce using rule 25 (iterate_statement)
